# pufferfish-prototype-v0

./: .gitignore  README.md
.github/workflows/: software.yml
archived/software/: .coveragerc  README.md  tox.ini
arduino libraries/arduino-sdp-fast/: sdpsensor-fast.cpp  sdpsensor-fast.h
arduino libraries/sfm3x00/: sfm3x00.cpp  sfm3x00.h
arduino libraries/sm9336/: keywords.txt  sm9336.cpp  sm9336.h
component testing and characterization routines/: README.md
component testing and characterization routines/actuator_speed_test/: README.md
component testing and characterization routines/linear_actuator_driven_pinch_valve_characterization_longterm/: linear_actuator_driven_pinch_valve_characterization_longterm.ino  quadratureEncoder.cpp  quadratureEncoder.h
component testing and characterization routines/stepper_motor_control_software/: readme.txt  stepper_motor_control_software.ino
component testing and characterization routines/valve_characterization_fast/: valve_characterization_fast.ino
component testing and characterization routines/valve_characterization_fast_multiple/: README.md  valve_characterization_fast_multiple.ino
controller/: change_log.txt
controller/firmware_pinch_valve_implementation/: firmware_pinch_valve_implementation.ino
controller/software_v2.1/: _def.py  microcontroller.py  vent4us.css  widgets.py
software/: .pylintrc  main.py  pyproject.toml
software/control/: _def.py  core.py  gui.py  utils.py  widgets.py  widgets_backup.py
software/ventapp/: main.py
software/ventapp/control/: _def.py  core.py  gui.py  widgets_backup.py
(+209 files in other folders)
